--- a/tanksTester/game.html
+++ b/tanksTester/game.html
@@ -90,10 +90,12 @@
                         if (item=='#')
                         {
                             $('#'+j+'_'+i).addClass("brick");
+                            $('#'+j+'_'+i).html("&nbsp;");
                         }
                         if (item=='@')
                         {
                             $('#'+j+'_'+i).addClass("coin");
+                            $('#'+j+'_'+i).html("&nbsp;");
                         }
                         if (item=='&larr;' || item=='&rarr;')
                         {
