add register link

--- a/tanksTester/upload.html
+++ b/tanksTester/upload.html
@@ -25,6 +25,7 @@
 
     </form>
     <h3><a href='/game'>В игру!</a></h3>
+    <h5><a href='/register'>Регистрация</a></h5>
     </div>
 </body>
 </html>
