--- a/tanksTester/game.html
+++ b/tanksTester/game.html
@@ -1,133 +1,31 @@
 <!DOCTYPE html>
-<html lang="en" style="height: 100%;">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-    <script src="static/jquery-3.1.0.min.js"></script>
-    <link rel="stylesheet" href="static/bootstrap.min.css">
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="static/bootstrap-theme.min.css">
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="static/bootstrap.min.js"></script>
+    <title>Tanks</title>
     <style>
-        table {
-            margin: 0 auto;
-            border-collapse: collapse;
-            table-layout: fixed;
-            width: 100%;
+        html, body {
+            padding: 0;
+            margin: 0;
+            background-image: url(/static/res/bg.jpg);
+            /*background-image: url(res/bg.jpg);*/
         }
-        p {
-            margin: 0 !important;
+        .container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
-        body {
-            background-image: url(static/grass.jpg);
-            background-repeat: repeat;
-        }
-        td {
-            color: white;
-        }
-        .player
-        {
-            background-image: url(static/player.png);
-            background-size: cover;
-        }
-        .vertical
-        {
-            background-image: url(static/vertical.png);
-            background-size: contain;
-            background-position: center;
-        }
-        .horizontal
-        {
-            background-image: url(static/horizontal.png);
-            background-size: contain;
-            background-position: center;
-        }
-        .brick
-        {
-            background-image: url(static/brick.jpg);
-            background-size: contain;
-            background-position: center;
-        }
-        .coin
-        {
-            background-image: url(static/coin.png);
-            background-size: contain;
-            background-position: center;
+        #canvas {
+            background-image: url(/static/res/grass.png);
+            /*background-image: url(res/grass.png);*/
         }
     </style>
-    <script>
-    var timerId = setInterval(function() {
-        $.ajax({
-          url: "/state",
-          success: function(data){
-            result = JSON.parse(data);
-            result.forEach(function(line, i, arr) {
-                line.forEach(function(item, j, arr1) {
-                    if (item!='.' && item!='&uarr;' && item!='&larr;' && item!='&rarr;' && item!='&darr;' && item!='#' && item!='@')
-                    {
-                        $('#'+j+'_'+i).addClass("player");
-                        $('#'+j+"_"+i).removeClass("vertical horizontal coin");
-                        if (item['hit']==1)
-                        {
-                            alert
-                            $('#'+j+'_'+i).html("<span style='color:red;'>"+item['life']+"</span><br><p style='font-size: 12px; line-height: 12px;'>"+item['name'].replace(" ", "<br/>")+'</p>');
-                        }
-                        else
-                        {
-                            $('#'+j+'_'+i).html(item['life']+"<br><p style='font-size: 12px; line-height: 12px;'>"+item['name'].replace(" ", "<br/>")+'</p>');
-                        }
-
-                    }
-                    else
-                    {
-                        $('#'+j+"_"+i).removeClass("player vertical horizontal coin");
-                        if (item=='.')
-                        {
-
-                            $('#'+j+'_'+i).html("&nbsp;");
-                        }
-                        if (item=='#')
-                        {
-                            $('#'+j+'_'+i).addClass("brick");
-                            $('#'+j+'_'+i).html("&nbsp;");
-                        }
-                        if (item=='@')
-                        {
-                            $('#'+j+'_'+i).addClass("coin");
-                            $('#'+j+'_'+i).html("&nbsp;");
-                        }
-                        if (item=='&larr;' || item=='&rarr;')
-                        {
-                            $('#'+j+'_'+i).addClass("horizontal");
-                            $('#'+j+'_'+i).html("&nbsp");
-                        }
-                        if (item=='&uarr;' || item=='&darr;')
-                        {
-                            $('#'+j+'_'+i).addClass("vertical");
-                            $('#'+j+'_'+i).html("&nbsp;");
-                        }
-                    }
-                });
-            });
-          }
-        });
-    }, 600);
-
-
-
-    </script>
-
+    <script src="/static/game.js"></script>
+    <!--<script src="game.js"></script>-->
 </head>
-<body style="height: 100%;">
-    <table cellspacing="0" style="min-width:100%; min-height: 100%;">
-    {% for x in range(int(height)) %}
-        <tr>
-         {% for y in range(int(width)) %}
-            <td  class="text-center" id="{{ x }}_{{ y }}">.</td>
-         {% end %}
-        </tr>
-    {% end %}
-    </table>
+<body>
+<div class="container">
+    <canvas id="canvas"></canvas>
+</div>
 </body>
 </html>
