--- a/tanksTester/stats.html
+++ b/tanksTester/stats.html
@@ -10,25 +10,40 @@
     <!-- Latest compiled and minified JavaScript -->
     <script src="static/bootstrap.min.js"></script>
     <script>
-    var timerId = setTimeout(function() {
-        location.href='/stats';
-    }, 5000);
-
+        var timerId = setTimeout(function () {
+            location.href = '/stats';
+        }, 5000);
 
 
     </script>
 </head>
 <body>
-    <table cellspacing="0" class="table">
-        <tr><th>#</th><th>Автор</th><th>HP</th><th>Качество</th><th>Действия</th><th>Попаданий</th><th>Время жизни</th><th>Монеты</th><th>Счет</th></tr>
+<table cellspacing="0" class="table">
+    <tr>
+        <th>#</th>
+        <th>Автор</th>
+        <th>HP</th>
+        <th>Качество</th>
+        <th>Действия</th>
+        <th>Попаданий</th>
+        <th>Время жизни</th>
+        <th>Монеты</th>
+        <th>Счет</th>
+    </tr>
     {% for i in range(len(gamestate)) %}
-        <tr>
-            <td>{{i}}</td><td>{{gamestate[i]['name']}}</td><td>{{gamestate[i]['hp']}}</td>
-            <td><span class="label {{gamestate[i]['quality_class']}}" title="{{gamestate[i]['lastCrash']}}">{{gamestate[i]['quality']}}</span></td>
-            <td>{{gamestate[i]['steps']}} ST/{{gamestate[i]['shots']}} SH</td>
-            <td>{{gamestate[i]['kills']}}</td><td>{{gamestate[i]['lifetime']}}</td><td>{{gamestate[i]['coins']}}</td><td>{{gamestate[i]['score']}}</td>
-        </tr>
+    <tr>
+        <td>{{i}}</td>
+        <td>{{gamestate[i]['name']}}</td>
+        <td>{{gamestate[i]['hp']}}</td>
+        <td><span class="label {{gamestate[i]['quality_class']}}" title="{{gamestate[i]['lastCrash']}}">{{gamestate[i]['quality']}}</span>
+        </td>
+        <td>{{gamestate[i]['steps']}} ST/{{gamestate[i]['shots']}} SH</td>
+        <td>{{gamestate[i]['kills']}}</td>
+        <td>{{gamestate[i]['lifetime']}}</td>
+        <td>{{gamestate[i]['coins']}}</td>
+        <td>{{gamestate[i]['score']}}</td>
+    </tr>
     {% end %}
-    </table>
+</table>
 </body>
 </html>
